- Bug #1902: Fixed the issue that CActiveRecord::exists() may cause ambiguous column error when used in relational query (Qiang)
- Bug #1920: Fixed the issue that the summary displayed by CGridView and CListView may be incorrect for SQL Server (Qiang)
- Bug #1936: Fixed the issue that flat CJuiDatePicker is not closing it's tag correctly (sebas)
- Bug: Fixed the bug that CActiveForm generates unnecessary js code about setting focus (Qiang)
- Enh #1733: Updated multifile plugin used by CMultiFileUpload to version 1.47 (mdomba)
- Enh #1785: Added CAssetManager::$excludeFiles property to support exclusion of irrelevant files from the publishing process (Y!!)
- Enh #1836: The contact form model of the blog demo does now make use of CCaptcha::checkRequirements (Y!!)
- Enh #1842: CHtml::button will not render the name attribute if it is set null (Qiang)
- Enh #1860: Changed the signature of CValidator::createValidator() to make it easier to use (Qiang)
- Enh #1849: Updated Blueprint CSS to version 1.0 (sebas)
- Enh #1872: Added $defaultUrl parameter to CWebUser::getReturnUrl() (Qiang)
- Enh #1885: Added ipFilters to the Gii-created config file to reduce user confusion (Sam Dark, Steve Friedl)
- Enh #1895: Added CDbDataReader implements Countable interface (mdomba)
- Enh #1899: Added checkIntegrity and resetSequence for SQL Server (Qiang)
- Enh #1929: Improved CActiveForm so that it can be used multiple times on the same page for the same type of data model (Qiang)
- Enh #1931: CDbConnection.tablePrefix can now use an empty string as table prefix (Qiang)
- Enh: CDbConnection::quoteColumnName and quoteTableName will properly quote table prefix and schema prefix. (Qiang)
- Enh: Added CConsoleCommand::init() (Qiang)
- Enh: Improved the exception display with source code for each call stack (Sam Dark, Qiang)
- Enh: Improved the error display in console command mode (Qiang)
- Enh: Added support for using anonymous parameters and global options in console commands (Qiang)